--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid header">
     <nav class="navbar navbar-expand-lg navbar-light bg-light rounded">
         <a class="navbar-brand" href="#">
-            <img class="colaboratics-logo center" src="/assets/images/colaboratics.png" alt="colaboratics">
+            <img class="colaboratics-logo pull-left" src="/assets/images/colaboratics.png" alt="colaboratics">
         </a>
         <button dropdownToggle class="navbar-toggler collapsed d-md-block d-lg-none" type="button" (click)="isCollapsed = !isCollapsed" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent" [collapse]="isCollapsed">
+        <div class="collapse navbar-collapse center" id="navbarSupportedContent" [collapse]="isCollapsed">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
