--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -13,3 +13,14 @@
       padding: 6px;
       background-color: #FFF;
   }
+
+  @media only screen and (min-width: 992px) {
+    .navbar-brand {
+        width: 38%;
+    }
+  }
+
+  .nav-link {
+      position: relative;
+      top: 22%;
+  }
