--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -20,6 +20,12 @@
     }
   }
 
+  @media only screen and (max-width: 991px) {
+    .navbar-brand {
+        width: 75%;
+    }
+  }
+
   .nav-link {
       position: relative;
       top: 22%;
