--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -29,6 +29,37 @@
     }
   }
 
+  @media only screen and (min-width: 600px) {
+    .carousel-img {
+        height: 520px;
+    }
+  }
+
+  @media only screen and (min-width: 679px) {
+    .carousel-img {
+        height: 540px;
+    }
+  }
+
+  @media only screen and (min-width: 992px) {
+    .carousel-img {
+        height: 620px;
+    }
+  }
+
+  @media only screen and (min-width: 1420px) {
+    .carousel-img {
+        height: 610px;
+    }
+  }
+
+
+  @media only screen and (min-width: 1720px) {
+    .carousel-img {
+        height: 590px;
+    }
+  }
+
 .magenta {
     color: #BA007C;
 }
