add text in carousel

--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -18,6 +18,10 @@
     .navbar-brand {
         width: 38%;
     }
+    .nav-link {
+        position: relative;
+        top: 24%;
+    }
   }
 
   @media only screen and (max-width: 991px) {
