increase wfh banner

--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -11,6 +11,7 @@ section {
     padding: 150px 0 120px;
      position: relative; 
     width: 100%;
+    height: 400px;
 }
 
 .banner-img {
@@ -93,10 +94,6 @@ section {
     text-align: center;
 }
 
-#txt-wfh-box, #txt-wfh-1{
-    top:-70px !important;
-}
-
 #txt-wfh-box {
     padding: 24px;
     opacity: 0.5;
@@ -114,7 +111,7 @@ section {
     font-size: 16px;
     color: #fff;
     padding: 12px;  
-    top: 25px !important;
+    top: 90px !important;
     font-family: "Lucida Console", Monaco, monospace;
 }
 
@@ -145,6 +142,12 @@ section {
     }
     #txt-wfh-2{
         font-size: 14px;
+    }
+  }
+
+  @media only screen and (max-width: 420px) {
+    #txt-wfh-box {
+        width: 90%;
     }
   }
 
