--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -4,7 +4,8 @@
 
 section {
     display: block;
-    position: relative
+    position: relative;
+    margin-bottom: 12px;
 }
 
 .section-image {
@@ -193,4 +194,9 @@ section {
 
 .cyan {
     color: #009ADA;
+}
+
+
+#see-more {
+  margin: 24px;
 }
