--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -53,3 +53,20 @@
         </div>
     </div>
 </section>
+<section class="section">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-6 col-xs-12" *ngFor="let preview of previews">
+                <app-preview [preview]="preview"></app-preview>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-lg-12">
+                <div id="see-more" class="text-center">
+                    <a class="btn btn-primary">Ver más</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+</section>
