--- a/src/styles.less
+++ b/src/styles.less
@@ -5,3 +5,26 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+.btn-primary {
+    color: #fff !important;
+    background-color: #009ADA;
+    border-color: #009ADA;
+}
+
+.btn {
+    padding: 12px 36px;
+    border-radius: 9px;
+}
+
+  .btn:hover {
+    background-color: #131E4F;
+    color: #fff !important;
+    border-color:  #131E4F;
+  }
+  .btn:active, 
+  .btn:target {
+    background-color: #131E4F;
+    color: #fff !important;
+    border-color:  #131E4F;
+  }
