--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -15,6 +15,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Soluciones<span class="sr-only">(current)</span></a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/store">Tienda Virtual<span class="sr-only">(current)</span></a>
+                </li>
                 <li class="nav-item ">
                     <a class="nav-link" href="#">Contacto <span class="sr-only">(current)</span></a>
                 </li>
