add contact form, footer email contact

--- a/src/app/footer-contact/footer-contact.component.html
+++ b/src/app/footer-contact/footer-contact.component.html
@@ -1,12 +1,13 @@
 <div class="container phone-container">
     <div class="row">
         <div class="col-xs-1">
-            <span class="address-icon"><i class="fa fa-phone"></i></span>
+            <span class="address-icon"><i class="fa fa-envelope"></i></span>
         </div>
         <div class="col-xs-11">
-            <span>Central Telefónica
+            <span class="mail">
                 <br>
-                51995042871</span>
+                <a href="mailto:contacto@colaboratics.pe">contacto@colaboratics.pe</a>
+            </span>
         </div>
     </div>
 </div>
