--- a/src/styles.less
+++ b/src/styles.less
@@ -1,30 +1,52 @@
 .fa {
-    color: #fff;
+  color: #fff;
 }
 
-body{
-    font-family: Arial, Helvetica, sans-serif;
+body {
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+html,
+body {
+  height: 100%;
+}
+
+#wrapper {
+  position: relative;
+  height: auto;
+  min-height: 100%;
+}
+
+#page-content {
+  position: relative;
+}
+
+#footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
 }
 
 .btn-primary {
-    color: #fff !important;
-    background-color: #009ADA;
-    border-color: #009ADA;
+  color: #fff !important;
+  background-color: #009ADA;
+  border-color: #009ADA;
 }
 
 .btn {
-    padding: 12px 36px;
-    border-radius: 9px;
+  padding: 12px 36px;
+  border-radius: 9px;
 }
 
-  .btn:hover {
-    background-color: #131E4F;
-    color: #fff !important;
-    border-color:  #131E4F;
-  }
-  .btn:active, 
-  .btn:target {
-    background-color: #131E4F;
-    color: #fff !important;
-    border-color:  #131E4F;
-  }
+.btn:hover {
+  background-color: #131E4F;
+  color: #fff !important;
+  border-color: #131E4F;
+}
+
+.btn:active,
+.btn:target {
+  background-color: #131E4F;
+  color: #fff !important;
+  border-color: #131E4F;
+}
