--- a/src/app/footer-contact/footer-contact.component.less
+++ b/src/app/footer-contact/footer-contact.component.less
@@ -1,9 +1,19 @@
 .fa {
-    font-size: 24px;
-    position: relative;
-    padding: 12px;
+  font-size: 24px;
+  position: relative;
+  padding: 12px;
 }
 
 .phone-container {
-    padding: 6px 12px 6px 6px;
+  padding: 6px 12px 6px 6px;
+}
+
+.mail {
+  text-align: center;
+  position: relative;
+  top: px;
+
+  a {
+    color: #fff;
+  }
 }
