--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,16 +10,16 @@
         <div class="collapse navbar-collapse center" id="navbarSupportedContent" [collapse]="isCollapsed">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Inicio <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Inicio <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Soluciones<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="#">Soluciones<span class="sr-only"></span></a>
+                </li>
+                <li class="nav-item" *ngIf="false">
+                    <a class="nav-link" href="/store">Tienda Virtual<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/store">Tienda Virtual<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item ">
-                    <a class="nav-link" href="#">Contacto <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="/contact">Contacto<span class="sr-only"></span></a>
                 </li>
             </ul>
         </div>
