--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -19,7 +19,7 @@
                     <a class="nav-link" href="/store">Tienda Virtual<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact">Contacto<span class="sr-only"></span></a>
+                    <a class="nav-link" href="/contact">Contáctanos<span class="sr-only"></span></a>
                 </li>
             </ul>
         </div>
