--- a/src/app/contact/contact.component.less
+++ b/src/app/contact/contact.component.less
@@ -7,3 +7,19 @@ h3 {
 #btn-wrapper{
     height: 48px;
 }
+span {
+    color: #000;
+}
+.fa{
+    color: #000;
+}
+
+.mail > a, .phone {
+    position: relative;
+    top: 15px;
+}
+
+.jumbotron {
+    background-color: transparent;
+    border: 1px solid #d2d2d2;
+}
