--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,12 +1,12 @@
 <div class="container-fluid footer mt-auto py-3">
     <div class="row">
-        <div class="col-sm-5">
+        <div class="col-lg-5 col-sm-12">
             <app-footer-address></app-footer-address>
         </div>
-        <div class="col-sm-3 mr-auto">
+        <div class="col-lg-3 col-sm-12 mr-auto">
             <app-social-media></app-social-media>
         </div>
-        <div class="col-auto">
+        <div class="col-lg-3 col-sm-12 col-auto">
             <app-footer-contact></app-footer-contact>
         </div>
     </div>
