--- a/src/styles.less
+++ b/src/styles.less
@@ -14,7 +14,7 @@ body {
 #wrapper {
   position: relative;
   height: auto;
-  min-height: 100%;
+  min-height: 90vh;
 }
 
 #page-content {
@@ -22,7 +22,7 @@ body {
 }
 
 #footer {
-  position: absolute;
+  position: relative;
   bottom: 0;
   width: 100%;
 }
