update email address

--- a/src/app/footer-contact/footer-contact.component.html
+++ b/src/app/footer-contact/footer-contact.component.html
@@ -6,7 +6,7 @@
         <div class="col-xs-11">
             <span class="mail">
                 <br>
-                <a href="mailto:contacto@colaboratics.pe">contacto@colaboratics.pe</a>
+                <a href="mailto:contacto@tics.pe">contacto@tics.pe</a>
             </span>
         </div>
     </div>
