add new fonts, look and feel

--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -33,7 +33,7 @@
             </div>
         </div>
         <div id="btn-wrapper" class="text-center col-lg-12 col-xs-12">
-            <button type="submit" class="btn btn-primary">Enviar Mensaje</button>
+            <button type="submit" class="btn btn-primary bold uppercase">Enviar Mensaje</button>
         </div>
     </div>
     <br>
