--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -10,19 +10,19 @@
         <div class="collapse navbar-collapse center" id="navbarSupportedContent" [collapse]="isCollapsed">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" [routerLink]="['home']">Inicio <span class="sr-only"></span></a>
+                    <a class="nav-link" [routerLink]="['home']">INICIO <span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item" *ngIf="false" routerLinkActive="active">
-                    <a class="nav-link" [routerLink]="['']">Soluciones<span class="sr-only"></span></a>
+                    <a class="nav-link" [routerLink]="['']">SOLUCIONES<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" [routerLink]="['logitech']">Logitech<span class="sr-only"></span></a>
+                    <a class="nav-link" [routerLink]="['logitech']">LOGITECH<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item" *ngIf="false" routerLinkActive="active">
-                    <a class="nav-link" [routerLink]="['store']">Tienda Virtual<span class="sr-only"></span></a>
+                    <a class="nav-link" [routerLink]="['store']">TIENDA VIRTUAL<span class="sr-only"></span></a>
                 </li>
                 <li class="nav-item" routerLinkActive="active">
-                    <a class="nav-link" [routerLink]="['contact']">Contáctanos<span class="sr-only"></span></a>
+                    <a class="nav-link" [routerLink]="['contact']">CONTACTO<span class="sr-only"></span></a>
                 </li>
             </ul>
         </div>
