--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,17 +24,17 @@
 
         <div class="row">
             <div class="col-md-4">
-                <i class="fa fa-home" aria-hidden="true"></i> <b>¿Por qué lo hacemos?</b>
+                <i class="fa fa-home" aria-hidden="true"></i> <span class="bold uppercase">¿Por qué lo hacemos?</span>
                 <p>Creemos en el uso de la tecnología como medio para mejorar la calidad de vida y ser una mejor sociedad.</p>
             </div>
             <div class="col-md-4">
 
-                <i class="fa fa-map-marker" aria-hidden="true"></i> <b>¿Cómo lo hacemos?</b>
+                <i class="fa fa-map-marker" aria-hidden="true"></i> <span class="bold uppercase">¿Cómo lo hacemos?</span>
                 <p>Mejorando la experiencia de adopción e implementación con tecnologías intuitivas y cotidianas.</p>
             </div>
             <div class="col-md-4">
 
-                <i class="fa fa-tv" aria-hidden="true"></i> <b>¿Qué hacemos?</b>
+                <i class="fa fa-tv" aria-hidden="true"></i> <span class="bold uppercase">¿Qué hacemos?</span>
                 <p>Integrando las mejores tecnologías de hardware, software y servicios especializados para transformar digitalmente tu empresa.</p>
             </div>
         </div>
@@ -63,7 +63,7 @@
         <div class="row">
             <div class="col-lg-12">
                 <div id="see-more" class="text-center">
-                    <a class="btn btn-primary">Ver más</a>
+                    <a class="btn btn-primary bold uppercase">Ver más</a>
                 </div>
             </div>
         </div>
