--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -122,6 +122,7 @@ section {
     top: 45% !important;
     z-index: 2;
     font-size: 36px;
+    line-height: 45px;
     width: 50%;
     font-family: Georgia, 'Times New Roman', Times, serif;
 }
