--- a/src/app/preview/preview.component.html
+++ b/src/app/preview/preview.component.html
@@ -1,7 +1,7 @@
 <div class="row">
     <div class="col-xs-6">
         <i [ngClass]="preview.iconCls"></i>
-        <span class="header">{{preview.header}}</span>
+        <span class="header bold uppercase">{{preview.header}}</span>
     </div>
     <div class="col-xs-6">
         <p>{{preview.body}}</p>
