--- a/src/styles.less
+++ b/src/styles.less
@@ -1,9 +1,17 @@
+@import 'fonts.less';
+@import 'navbar.less';
+@import 'btn.less';
+
+
 .fa {
   color: #fff;
 }
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Brown-Pro-Light';
+  font-size: 17px;
+  line-height: 22px;
+  color: #222;
 }
 
 html,
@@ -49,4 +57,13 @@ body {
   background-color: #131E4F;
   color: #fff !important;
   border-color: #131E4F;
+}
+
+.bold {
+  font-family: Brown-Pro-Bold;
+  color: #222;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
