--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -24,17 +24,17 @@
 
         <div class="row">
             <div class="col-md-4">
-                <i class="fa fa-home" aria-hidden="true"></i> <span class="bold uppercase">¿Por qué lo hacemos?</span>
+                <i class="fa fa-home" aria-hidden="true"></i> <span class="bold uppercase header">¿Por qué lo hacemos?</span>
                 <p>Creemos en el uso de la tecnología como medio para mejorar la calidad de vida y ser una mejor sociedad.</p>
             </div>
             <div class="col-md-4">
 
-                <i class="fa fa-map-marker" aria-hidden="true"></i> <span class="bold uppercase">¿Cómo lo hacemos?</span>
+                <i class="fa fa-map-marker" aria-hidden="true"></i> <span class="bold uppercase header">¿Cómo lo hacemos?</span>
                 <p>Mejorando la experiencia de adopción e implementación con tecnologías intuitivas y cotidianas.</p>
             </div>
             <div class="col-md-4">
 
-                <i class="fa fa-tv" aria-hidden="true"></i> <span class="bold uppercase">¿Qué hacemos?</span>
+                <i class="fa fa-tv" aria-hidden="true"></i> <span class="bold uppercase header">¿Qué hacemos?</span>
                 <p>Integrando las mejores tecnologías de hardware, software y servicios especializados para transformar digitalmente tu empresa.</p>
             </div>
         </div>
@@ -58,13 +58,6 @@
         <div class="row">
             <div class="col-lg-6 col-xs-12" *ngFor="let preview of previews">
                 <app-preview [preview]="preview"></app-preview>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-lg-12">
-                <div id="see-more" class="text-center">
-                    <a class="btn btn-primary bold uppercase">Ver más</a>
-                </div>
             </div>
         </div>
     </div>
