--- a/src/app/home/home.component.less
+++ b/src/app/home/home.component.less
@@ -1,10 +1,14 @@
 .fa {
-    color: #000;
+    color: #222;
 }
 
 section {
     display: block;
     position: relative;
+}
+
+.header {
+    font-size: 20px;
 }
 
 .section-image {
