--- a/src/navbar.less
+++ b/src/navbar.less
@@ -1,7 +1,9 @@
-.navbar-light .navbar-nav .nav-link {
+.navbar-light .navbar-nav .nav-link {    
+    font-family: Brown-Pro-Light;
     color: #222;
+    font-size: 16px;
 }
 .navbar-light .navbar-nav .active>.nav-link{
-    font-family: Brown-Pro-bold;
+    font-family: Brown-Pro-Bold;
     color: #333;
 }
